# MouseBrain

./: .gitignore  AGENTS.md  README.md  REFACTOR_PLAN.md  _run_coloc_test.py  _test_import.py  _test_import2.py  pyproject.toml
2D_Slices/: run_batch_analysis.py
2D_Slices/Script_Tools/SliceAtlas/: PROJECT_PLAN.md  TOOLS.md  pyproject.toml  test_folder_load.py
2D_Slices/Script_Tools/SliceAtlas/brainslice/core/: colocalization.py  config.py  detection.py  io.py  quantification.py  visualization.py
2D_Slices/Script_Tools/SliceAtlas/brainslice/napari_plugin/: annotator_widget.py  annotator_worker.py  main_widget.py  workers.py
2D_Slices/Script_Tools/SliceAtlas/brainslice/tracker/: schema.py
3D_Cleared/: readme.txt
3D_Cleared/2_Data_Summary/: 349_CNT_01_02_349_CNT_01_02_1p625x_z4_counts.csv  357_CNT_02_08_357_CNT_02_08_1p625x_z4_counts.csv  367_CNT_03_07_367_CNT_03_07_1p625x_z4_counts.csv  368_CNT_03_08_368_CNT_03_08_1p625x_z4_counts.csv  DATA_HIERARCHY.md  calibration_runs.csv  elife-76254-data1-v2.xlsx - Shortcut.lnk  elife_comparison_349_357_367.csv  elife_comparison_with_reference.csv  elife_counts.csv  elife_counts_archive.csv  experiments.csv  hemisphere_laterality_analysis.csv  laterality.7z  quick_comparison.csv  region_counts.csv  region_counts_archive.csv
3D_Cleared/util_Brainglobe/: !!!OLD BRAINS ARE ILP ALIGNMENT!!!.txt  349_CNT_01_02.metadata.txt  DIRECTORY_DUMP.txt  Installing_BrainGlobe_on_nonsystem_drive.txt  readme.txt
3D_Cleared/util_Scripts/: 1_organize_pipeline.py  2_extract_and_analyze.py  3_register_to_atlas.py  4_detect_cells.py  5_classify_cells.py  6_count_regions.py  INSTALL_MANUAL_CROP_PLUGIN.bat  OPTIMIZATION_WORKFLOW.md  README.md  RUN_PIPELINE.bat  RUN_PIPELINE.py  SYSTEM_ARCHITECTURE.md  _check_boundaries.py  _compare_elife.py  _elife_output.txt  _read_elife.py  batch_process.py  batch_train_compare.py  claude.md  compare_model_classification.py  config.py  convert_keras3_to_h5.py  direct_368_count.py  elife_region_mapping.py  experiment_tracker.py  overnight_batch.py  run_368_count.py  run_368_simple.py  update_paths.py  util_apply_crop_from_reference.py  util_approve_registration.py  util_atlas_prefilter.py  util_backfill_registrations.py  util_compare_to_published.py  util_create_training_cubes.py  util_estimate_voxel_size.py  util_experiments.py  util_fetch_elife_cervical.py  util_generate_elife_report.py  util_hemisphere_laterality.py  (+7 more)
Injury/util_Scripts/: Contusion_Stats_MANOVA.py
MouseBrain_Pipeline/: AGENTS.md  README.md
braintools/: install.ps1  pyproject.toml
braintools/scripts/: setup.py
braintools/src/braintools/: __init__.py  cli.py  config.py  tracker.py
braintools/src/braintools/pipeline_2d/: ALGORITHM_REFERENCE.md  __init__.py  napari.yaml
braintools/src/braintools/pipeline_2d/annotator/: __init__.py
braintools/src/braintools/pipeline_2d/annotator/core/: __init__.py  image_utils.py  io.py
braintools/src/braintools/pipeline_2d/annotator/widgets/: main_widget.py
braintools/src/braintools/pipeline_2d/sliceatlas/: __init__.py
braintools/src/braintools/pipeline_2d/sliceatlas/batch/: batch_encr.py
braintools/src/braintools/pipeline_2d/sliceatlas/core/: __init__.py  atlas_utils.py  colocalization.py  config.py  deepslice_wrapper.py  detection.py  image_utils.py  inset_detection.py  insets.py  io.py  preprocessing.py  quantification.py  visualization.py
braintools/src/braintools/pipeline_2d/sliceatlas/napari_plugin/: alignment_widget.py  annotator_widget.py  annotator_worker.py  main_widget.py  workers.py
braintools/src/braintools/pipeline_2d/sliceatlas/tests/: test_load_image.py
braintools/src/braintools/pipeline_2d/sliceatlas/tracker/: slice_tracker.py
braintools/src/braintools/pipeline_3d/: crop_subprocess.py  experiments_widget.py  manual_crop_widget.py  napari.yaml  pipeline_widget.py  session_documenter.py  tuning_widget.py
docs/pipeline/: README.md  SYSTEM_ARCHITECTURE.md  claude.md
mousebrain/: AGENTS.md  README.md  REFACTOR_PLAN.md  pyproject.toml
mousebrain/scripts/: install.py
mousebrain/src/mousebrain/: __init__.py  cli.py  config.py  napari.yaml  tracker.py
mousebrain/src/mousebrain/pipeline_2d/: napari.yaml
mousebrain/src/mousebrain/pipeline_2d/BrainSlice_Data/: calibration_runs.csv
mousebrain/src/mousebrain/pipeline_2d/annotator/core/: image_utils.py  io.py
mousebrain/src/mousebrain/pipeline_2d/annotator/models/: __init__.py
mousebrain/src/mousebrain/pipeline_2d/sliceatlas/: __init__.py
mousebrain/src/mousebrain/pipeline_2d/sliceatlas/core/: atlas_utils.py  colocalization.py  config.py  detection.py  inset_detection.py  insets.py  io.py  quantification.py  visualization.py
mousebrain/src/mousebrain/pipeline_2d/sliceatlas/napari_plugin/: annotator_widget.py  annotator_worker.py  main_widget.py  workers.py
mousebrain/src/mousebrain/pipeline_2d/sliceatlas/tests/: test_load_image.py
mousebrain/src/mousebrain/pipeline_2d/sliceatlas/tracker/: __init__.py  schema.py  slice_tracker.py
mousebrain/src/mousebrain/pipeline_3d/: __init__.py  curation_widget.py  experiments_widget.py  manual_crop_widget.py  napari.yaml  pipeline_widget.py  session_documenter.py  tuning_widget.py
scripts/: exploration_zscore_otsu.ipynb  install.py  setup.py
scripts/pipeline/: 1_organize_pipeline.py  2_extract_and_analyze.py  3_register_to_atlas.py  4_detect_cells.py  5_classify_cells.py  6_count_regions.py  RUN_PIPELINE.py  batch_classify_all.py  batch_process.py  overnight_batch.py
scripts/utils/: _worker_batch.py  compare_display.py  compare_display2.py  compare_display3.py  compare_display4.py  compare_display5.py  compare_display6.py  compare_display7.py  elife_region_mapping.py  generate_coloc_roi_figure.py  run_encr_coloc_batch.py  util_apply_crop_from_reference.py  util_approve_registration.py  util_atlas_prefilter.py  util_backfill_registrations.py  util_compare_to_published.py  util_create_training_cubes.py  util_estimate_voxel_size.py  util_experiments.py  util_generate_elife_report.py  util_hemisphere_laterality.py  util_ims_metadata_dump.py  util_manual_crop.py  (+7 more)
(+409 files in other folders)
