[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braintools"
version = "0.2.0"
description = "SCI-Connectome tissue analysis tools — 3D cleared brain and 2D slice pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Logan Friedrich", email = "logan.friedrich@marquette.edu"}
]
keywords = ["brainglobe", "napari", "neuroscience", "cell-detection", "histology"]

dependencies = [
    # Core napari
    "napari[all]>=0.4.18",

    # Data handling
    "numpy",
    "scipy",
    "pandas",
    "tifffile",
    "h5py",
    "matplotlib",
    "natsort",

    # Qt/GUI
    "qtpy",

    # Utilities
    "rich",
    "tqdm",
]

# NOTE: PyTorch is NOT listed here because it requires special installation.
# Run install.ps1 which handles torch installation from the correct index.

[project.optional-dependencies]
3d = [
    # BrainGlobe stack
    "brainreg>=1.0.0",
    "brainglobe-atlasapi",
    "brainglobe-utils",
    "brainglobe-segmentation",
    "cellfinder>=1.0.0",
    # ML backends (IMPORTANT: version-pinned to avoid breaking changes)
    "tensorflow>=2.10.0,<2.16",
    "keras>=2.10.0,<3.0",  # keras 3.x has breaking API changes
    # Data formats (IMPORTANT: zarr pinned to v2 API)
    "zarr>=2.13,<3.0",  # zarr 3.x has breaking API changes (open vs open_array)
    "dask[array]",
    "imaris-ims-file-reader",  # For reading .ims files
]
2d = [
    # Slice analysis
    "scikit-image>=0.21",
    "stardist>=0.8",
    "brainglobe-atlasapi",
    "pillow>=9.0",
    "nd2",
    "dask>=2022.1",
]
2d-alignment = [
    "braintools[2d]",
    "DeepSlice",
    "SimpleITK-SimpleElastix",
]
all = [
    "braintools[3d]",
    "braintools[2d]",
    "braintools[2d-alignment]",
]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
braintool = "braintools.cli:main"

# Register both napari plugins from one package
[project.entry-points."napari.manifest"]
sci-connectome-pipeline = "braintools.pipeline_3d:napari.yaml"
brainslice-2d = "braintools.pipeline_2d:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"braintools.pipeline_3d" = ["napari.yaml"]
"braintools.pipeline_2d" = ["napari.yaml"]
