[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mousebrain"
version = "0.2.0"
description = "SCI-Connectome tissue analysis tools — 3D cleared brain and 2D slice pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Logan Friedrich", email = "logan.friedrich@marquette.edu"}
]
keywords = ["brainglobe", "napari", "neuroscience", "cell-detection", "histology"]

dependencies = [
    # Core napari
    "napari[all]>=0.4.18",

    # Data handling
    "numpy",
    "scipy",
    "pandas",
    "tifffile",
    "h5py",
    "matplotlib",
    "natsort",

    # Qt/GUI
    "qtpy",

    # Utilities
    "rich",
    "tqdm",
]

# NOTE: PyTorch is NOT listed here because it requires special installation.
# Run install.ps1 which handles torch installation from the correct index.

[project.optional-dependencies]
3d = [
    # BrainGlobe stack
    "brainreg>=1.0.0",
    "brainglobe-atlasapi",
    "brainglobe-utils",
    "brainglobe-segmentation",
    "cellfinder>=1.0.0",
    # ML backends (IMPORTANT: version-pinned to avoid breaking changes)
    "tensorflow>=2.10.0,<2.16",
    "keras>=2.10.0,<3.0",  # keras 3.x has breaking API changes
    # Data formats (IMPORTANT: zarr pinned to v2 API)
    "zarr>=2.13,<3.0",  # zarr 3.x has breaking API changes (open vs open_array)
    "dask[array]",
    "imaris-ims-file-reader",  # For reading .ims files
]
2d = [
    # Slice analysis
    "scikit-image>=0.21",
    "stardist>=0.8",
    "brainglobe-atlasapi",
    "pillow>=9.0",
    "nd2",
    "dask>=2022.1",
]
2d-alignment = [
    "mousebrain[2d]",
    "DeepSlice",
    "SimpleITK-SimpleElastix",
]
all = [
    "mousebrain[3d]",
    "mousebrain[2d]",
    "mousebrain[2d-alignment]",
]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
mousebrain = "mousebrain.cli:main"

# Single napari manifest with all widgets (napari requires name == package name)
[project.entry-points."napari.manifest"]
mousebrain = "mousebrain:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mousebrain = ["napari.yaml"]
"mousebrain.pipeline_3d" = ["napari.yaml"]
"mousebrain.pipeline_2d" = ["napari.yaml"]
